external-crates/move/crates/move-compiler/tests/move_check/feature_gate/const_package_visibility.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/const_package_visibility.move:7:5
  │
7 │     public(package) const MAX: u64 = 100;
  │     ^^^^^^^^^^^^^^^ cross-module constant accesses are not supported by current edition 'legacy'; the '2024.alpha' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
